feat: add updateTicket controller
